@@ -83,9 +83,9 @@ read_plaque(tmp, str) {
   }
 
 
-  write("+-------------------------+\n");
-  write("|  T O P   K I L L E R S  |\n");
-  write("+-------------------------+\n");
+  write("+-----------------------------+\n");
+  write("|    T O P   K I L L E R S s   |\n");
+  write("+-----------------------------+\n");
 
 j = 0;
 
